<resources>
    <string name="app_name">Learning_English_Kotlin</string>
    <string name="statistics">Статистика:</string>
    <string name="theme">Тема</string>
    <string name="right_answers">0</string>
    <string name="delimiter">/</string>
    <string name="number_of_correct_answers">8</string>
    <string name="start_learning">Начать учиться!</string>
    <string name="test_knowledge">Проверить знания!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>