<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".selection_menu.SelectionMenuFragment">

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:text="@string/statistics"/>

    <TextView
        android:id="@+id/tvTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="220sp"
        tools:text="@string/theme"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250sp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="30sp"
            android:layout_marginStart="30dp"
            android:gravity="center_horizontal"
            android:text="@string/right_answers"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center_horizontal"
            android:text="@string/delimiter"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/count_of_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center_horizontal"
            android:layout_marginEnd="30sp"
            tools:text="@string/number_of_correct_answers"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
    <Button
        android:id="@+id/btn_start_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_learning"/>

    <Button
        android:id="@+id/btn_test_knowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/test_knowledge"/>
</LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_lesson"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</FrameLayout>